--- a/ledger/conf/log4j2.properties.tmpl
+++ b/ledger/conf/log4j2.properties.tmpl
@@ -1,4 +1,4 @@
-rootLogger.level=${env:SCALAR_DL_LEDGER_LOG_LEVEL:-INFO}
+rootLogger.level={{ default .Env.SCALAR_DL_LEDGER_LOG_LEVEL "INFO" }}
 rootLogger.appenderRef.stdout.ref=STDOUT
 appender.console.type=Console
 appender.console.name=STDOUT
