--- a/schema-loader/database.properties.tmpl
+++ b/schema-loader/database.properties.tmpl
@@ -1,12 +1,12 @@
 # Comma separated contact points. For DynamoDB, the region is specified by this parameter.
-scalar.db.contact_points=${env:SCALAR_DB_CONTACT_POINTS:-}
+scalar.db.contact_points={{ default .Env.SCALAR_DB_CONTACT_POINTS "" }}
 
 # Port number for all the contact points. Default port number for each database is used if empty.
-scalar.db.contact_port=${env:SCALAR_DB_CONTACT_PORT:-}
+scalar.db.contact_port={{ default .Env.SCALAR_DB_CONTACT_PORT "" }}
 
 # Credential information to access the database. For Cosmos DB, username isn't used. For DynamoDB, AWS_ACCESS_KEY_ID is specified by the username and AWS_ACCESS_SECRET_KEY is specified by the password.
-scalar.db.username=${env:SCALAR_DB_USERNAME:-}
-scalar.db.password=${env:SCALAR_DB_PASSWORD:-}
+scalar.db.username={{ default .Env.SCALAR_DB_USERNAME "" }}
+scalar.db.password={{ default .Env.SCALAR_DB_PASSWORD "" }}
 
 # Storage implementation. "cassandra" or "cosmos" or "dynamo" or "jdbc" or "grpc" can be set. Default storage is "cassandra".
-scalar.db.storage=${env:SCALAR_DB_STORAGE:-}
+scalar.db.storage={{ default .Env.SCALAR_DB_STORAGE "" }}
